--- a/src/style.css
+++ b/src/style.css
@@ -60,8 +60,7 @@ body {
    justify-content: space-between;
    align-items: center;
 }
-.pictur__text {
-}
+
 .pictur__id {
    font-size: 15px;
    font-weight: 700;
@@ -86,4 +85,10 @@ body {
    border-style: solid;
    width: 60px;
    height: 60px;
+}
+.pictur__delete {
+   padding: 5px 20px;
+   border-radius: 12px;
+   border: 1px solid #418ccf;
+   margin-top: 5px;
 }
